# GifCreator

./: Behaviour.hpp  CMakeLists.txt  Color.hpp  GifCreator.cpp  GifCreator.hpp  GifWriterHandle.cpp  GifWriterHandle.hpp  IColorable.hpp  IDrawable.hpp  IMovable.hpp  IPositionable.hpp  IZoomable.hpp  Image.cpp  Image.hpp  Irregular.cpp  Irregular.hpp  Pixel.hpp  Square.cpp  Square.hpp  Todo.txt  Type.hpp  Utils.hpp  build.sh  compile.sh  main.cpp
Core/: Behaviour.hpp  GifCreator.cpp  GifCreator.hpp  GifWriterHandle.cpp  GifWriterHandle.hpp  IColorable.hpp  IDrawable.hpp  IMovable.hpp  INameable.hpp  IPositionable.hpp  IZoomable.hpp  Image.cpp  Image.hpp  Square.hpp  Type.hpp
Core/ConcreteObjects/: Circle.cpp  Circle.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp
EncoderDecoder/: BehaviourDecoder.cpp  BehaviourDecoder.hpp  BehaviourMapperFactory.cpp  BehaviourMapperFactory.hpp  Decoder.cpp  Decoder.hpp  IBehaviourMapperFactory.hpp  IObjectFactory.hpp  Keys.hpp  ObjectMapper.cpp  ObjectMapper.hpp  Project.json  Values.hpp
Gui/: AList.cpp  AList.hpp  BehaviourList.cpp  BehaviourList.hpp  GifCreatorGui.cpp  GifCreatorGui.hpp  ObjectList.cpp  ObjectList.hpp
Registrar/: BehaviourClassRegistrar.cpp  BehaviourClassRegistrar.hpp  BehaviourMethodRegistrar.hpp  BehaviourRegistrar.cpp  BehaviourRegistrar.hpp  IBehaviourClassRegistrar.hpp  Keys.hpp  ObjectFactory.hpp  ObjectRegistrar.cpp  ObjectRegistrar.hpp  Project.json  Registrar.cpp  Registrar.hpp  Values.hpp
